Changed names of variables
R_val_idx -> R_idx_val
Same for train and test.

--- a/matrix_factorization/matrix_factorization.ipynb
+++ b/matrix_factorization/matrix_factorization.ipynb
@@ -170,7 +170,6 @@
    "outputs": [],
    "source": [
     "# Run an epoch of gradient descent where the iterations parameter is the number of iterations.\n",
-    "@njit\n",
     "def run_epoch(R_idx_list, P, Q, alpha, llambda, iterations):\n",
     "    oldP = P.copy()\n",
     "    oldQ = Q.copy()\n",
@@ -292,8 +291,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.701 sec\n",
-      "0.128 minutes\n",
+      "8.098 sec\n",
+      "0.135 minutes\n",
       "\n",
       "We have 10000 playlists\n"
      ]
@@ -302,6 +301,7 @@
    "source": [
     "time_0 = time()\n",
     "R_list = make_R_list_sql(conn, pid_limit=10000, progress=10)\n",
+    "# R_list = make_R_list_sql(conn, pid_limit=None, progress=10)\n",
     "time_end = time()\n",
     "\n",
     "print('{:.3f} sec'.format(time_end-time_0))\n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -387,6 +387,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(545608, 2)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R_list_full.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -395,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,11 +424,11 @@
     "# Remove tracks we don't know from the validation and test sets\n",
     "# Create new arrays with consecutive tids\n",
     "# And store the dicts to go from the original pid-tid labeling to the new consecutive indexing\n",
-    "_,           R_train_idx, _,   _  = format_new_R_list(R_list_train, tid_to_idx)\n",
-    "R_list_val,  R_val_idx,   _,   _  = format_new_R_list(R_list_val,  tid_to_idx)\n",
-    "R_list_test, R_test_idx,  pid_to_idx_test,  idx_to_pid_test  = format_new_R_list(R_list_test,  tid_to_idx)\n",
+    "_,           R_idx_train, _,   _  = format_new_R_list(R_list_train, tid_to_idx)\n",
+    "R_list_val,  R_idx_val,   _,   _  = format_new_R_list(R_list_val,  tid_to_idx)\n",
+    "R_list_test, R_idx_test,  pid_to_idx_test,  idx_to_pid_test  = format_new_R_list(R_list_test,  tid_to_idx)\n",
     "\n",
-    "R_list_full, R_full_idx,  pid_to_idx_full,  idx_to_pid_full  = format_new_R_list(R_list_full,  tid_to_idx)"
+    "R_list_full, R_idx_full,  pid_to_idx_full,  idx_to_pid_full  = format_new_R_list(R_list_full,  tid_to_idx)"
    ]
   },
   {
@@ -450,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {
     "id": "b_nyoRWcHyXi"
    },
@@ -459,42 +479,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training done: 3.956 sec\n"
+      "Training done: 4.314 sec\n"
      ]
     }
    ],
    "source": [
     "# Run gradient descent algorithm with alpha = 0.001, llambda = 0.005 for 100 iterations\n",
     "start_time = time()\n",
-    "P_trained, Q_trained = run_epoch(R_train_idx, P, Q, 0.001, 0.005, 100)\n",
+    "P_trained, Q_trained = run_epoch(R_idx_train, P, Q, 0.001, 0.005, 100)\n",
     "end_time = time()\n",
     "print('Training done: {:.3f} sec'.format(end_time-start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.20523416,  0.05141345,  0.15402769, ...,  0.10298745,\n",
-       "         0.04054327,  0.04400497],\n",
-       "       [-0.01634108,  0.08450744,  0.02457291, ...,  0.01645157,\n",
-       "         0.0200186 , -0.03340193],\n",
-       "       [-0.21380995, -0.22486889, -0.12653225, ..., -0.09619723,\n",
-       "        -0.05161501, -0.07585662],\n",
+       "array([[-1.89281650e-01,  9.43241042e-02,  5.44759806e-02, ...,\n",
+       "         1.32290264e-01,  5.50447135e-02,  1.03168083e-01],\n",
+       "       [-8.09589491e-03,  5.63107788e-03,  3.62360997e-02, ...,\n",
+       "         9.50698303e-02, -3.18503058e-02, -7.05687081e-02],\n",
+       "       [ 1.53327528e-01, -2.67176227e-01,  4.44266766e-02, ...,\n",
+       "        -4.25873151e-02, -7.11264946e-02, -2.65795997e-02],\n",
        "       ...,\n",
-       "       [ 0.1068875 ,  0.03390851,  0.02614311, ..., -0.06347865,\n",
-       "         0.05474985,  0.16148494],\n",
-       "       [ 0.16627533, -0.14142665, -0.06660446, ...,  0.11931262,\n",
-       "         0.23330267,  0.0115071 ],\n",
-       "       [-0.1927208 , -0.12406706, -0.07629527, ..., -0.07903929,\n",
-       "         0.01626884,  0.18872745]])"
+       "       [ 5.78171755e-02, -9.49373016e-02, -1.95095516e-01, ...,\n",
+       "         4.86151960e-03,  5.57256827e-02, -3.13824028e-02],\n",
+       "       [ 7.37723330e-02,  5.65579671e-02,  1.66859731e-01, ...,\n",
+       "        -9.72175635e-02, -5.97774731e-02, -6.48184599e-02],\n",
+       "       [ 2.29046472e-02,  4.80685770e-05,  1.02313141e-01, ...,\n",
+       "         2.21370844e-01,  1.17108674e-01,  2.44729140e-02]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,9 +532,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'R_idx_val' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[14], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Run gradient descent algorithm with alpha = 0.001, llambda = 0.005 for 100 iterations\u001b[39;00m\n\u001b[1;32m      2\u001b[0m start_time \u001b[38;5;241m=\u001b[39m time()\n\u001b[0;32m----> 3\u001b[0m P_val \u001b[38;5;241m=\u001b[39m make_Pval(R_idx_val, Q_trained, \u001b[38;5;241m0.005\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMSE:\u001b[39m\u001b[38;5;124m'\u001b[39m, MSE(R_idx_val, P_val, Q_trained))\n\u001b[1;32m      5\u001b[0m end_time \u001b[38;5;241m=\u001b[39m time()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'R_idx_val' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Run gradient descent algorithm with alpha = 0.001, llambda = 0.005 for 100 iterations\n",
     "start_time = time()\n",
@@ -541,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +604,7 @@
     "                Q_initial = np.random.normal(0, 0.1, (num_songs, f))\n",
     "\n",
     "                # Obtain P, Q with the chosen hyperparameters\n",
-    "                P_trained, Q_trained = run_epoch(R_train_idx, P=P_initial, Q=Q_initial, alpha=alpha, llambda=llambda, iterations=NUM_ITERATIONS)\n",
+    "                P_trained, Q_trained = run_epoch(R_idx_train, P=P_initial, Q=Q_initial, alpha=alpha, llambda=llambda, iterations=NUM_ITERATIONS)\n",
     "                \n",
     "                # Skip iteration if Q_trained contains a nan\n",
     "                if np.isnan(Q_trained).any():\n",
@@ -1003,7 +1035,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run an epoch of gradient descent where the iterations parameter is the number of iterations.\n",
+    "def run_epoch(R_idx_list, P, Q, alpha, llambda, iterations):\n",
+    "    oldP = P.copy()\n",
+    "    oldQ = Q.copy()\n",
+    "    f = np.shape(P)[1]\n",
+    "    \n",
+    "    for _ in range(iterations):\n",
+    "        newP = oldP.copy()\n",
+    "        newQ = oldQ.copy()\n",
+    "        for u,i in R_idx_list:\n",
+    "            dotprod = 0\n",
+    "            for feature in range(f):\n",
+    "                dotprod += oldP[u,feature] * oldQ[i,feature]\n",
+    "            error = dotprod - 1\n",
+    "\n",
+    "            for feature in range(f):\n",
+    "                pf = oldP[u,feature]\n",
+    "                qf = oldQ[i,feature]\n",
+    "                newP[u,feature] -= alpha * (error * qf + llambda * pf) \n",
+    "                newQ[i,feature] -= alpha * (error * pf + llambda * qf)\n",
+    "        oldP = newP\n",
+    "        oldQ = newQ\n",
+    "    return newP, newQ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,22 +1080,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 7000 is out of bounds for axis 0 with size 7000",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Obtain P, Q with the chosen hyperparameters\u001b[39;00m\n\u001b[1;32m      6\u001b[0m time_start \u001b[38;5;241m=\u001b[39m time()\n\u001b[0;32m----> 7\u001b[0m P_trained, Q_trained \u001b[38;5;241m=\u001b[39m run_epoch(R_idx_full, P\u001b[38;5;241m=\u001b[39mP_initial, Q\u001b[38;5;241m=\u001b[39mQ_initial, alpha\u001b[38;5;241m=\u001b[39malpha, llambda\u001b[38;5;241m=\u001b[39mllambda, iterations\u001b[38;5;241m=\u001b[39mNUM_ITERATIONS)\n\u001b[1;32m      8\u001b[0m time_end \u001b[38;5;241m=\u001b[39m time()\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTraining\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28mstr\u001b[39m( timedelta(seconds\u001b[38;5;241m=\u001b[39mtime_end\u001b[38;5;241m-\u001b[39mtime_start) )[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m4\u001b[39m])\n",
+      "Cell \u001b[0;32mIn[4], line 13\u001b[0m, in \u001b[0;36mrun_epoch\u001b[0;34m(R_idx_list, P, Q, alpha, llambda, iterations)\u001b[0m\n\u001b[1;32m     11\u001b[0m dotprod \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m feature \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(f):\n\u001b[0;32m---> 13\u001b[0m     dotprod \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m oldP[u,feature] \u001b[38;5;241m*\u001b[39m oldQ[i,feature]\n\u001b[1;32m     14\u001b[0m error \u001b[38;5;241m=\u001b[39m dotprod \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m feature \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(f):\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 7000 is out of bounds for axis 0 with size 7000"
+     ]
+    }
+   ],
    "source": [
-    "R_train_full = np.concatenate( (R_list_train,R_list_val) )\n",
-    "R_train_full, R_full_idx, pid_to_idx, idx_to_pid = format_new_R_list(R_train_full, tid_to_idx)\n",
-    "\n",
     "# Initialize random data\n",
     "P_initial = np.random.normal(0, 0.1, (num_playlists, f))\n",
     "Q_initial = np.random.normal(0, 0.1, (num_songs, f))\n",
     "\n",
     "# Obtain P, Q with the chosen hyperparameters\n",
     "time_start = time()\n",
-    "P_trained, Q_trained = run_epoch(R_list_train, P=P_initial, Q=Q_initial, alpha=alpha, llambda=llambda, iterations=NUM_ITERATIONS)\n",
+    "P_trained, Q_trained = run_epoch(R_idx_full, P=P_initial, Q=Q_initial, alpha=alpha, llambda=llambda, iterations=NUM_ITERATIONS)\n",
     "time_end = time()\n",
     "print('Training\"', str( timedelta(seconds=time_end-time_start) )[:-4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training playlists: 7000\n",
+      "Number of training songs: 134357\n"
+     ]
+    }
+   ],
+   "source": [
+    "R_list_train = R_list[ np.isin(R_list[:,0], pid_train), :]\n",
+    "R_list_val   = R_list[ np.isin(R_list[:,0], pid_val),   :]\n",
+    "R_list_test  = R_list[ np.isin(R_list[:,0], pid_test),  :]\n",
+    "R_list_full  = np.concatenate( (R_list_train, R_list_val))\n",
+    "\n",
+    "# Store the track id of songs in the train/val/test sets\n",
+    "tid_train = np.unique( R_list_train[:,1] )\n",
+    "tid_val   = np.unique( R_list_val[:,1]   )\n",
+    "tid_test  = np.unique( R_list_test[:,1]  )\n",
+    "\n",
+    "num_playlists = len(pid_train)\n",
+    "num_songs = len(tid_train)\n",
+    "\n",
+    "print('Number of training playlists:', num_playlists)\n",
+    "print('Number of training songs:', num_songs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tid_to_idx, _ = list_to_dict(tid_train)\n",
+    "\n",
+    "# Remove tracks we don't know from the validation and test sets\n",
+    "# Create new arrays with consecutive tids\n",
+    "# And store the dicts to go from the original pid-tid labeling to the new consecutive indexing\n",
+    "_,           R_idx_train, _,   _  = format_new_R_list(R_list_train, tid_to_idx)\n",
+    "R_list_val,  R_idx_val,   _,   _  = format_new_R_list(R_list_val,  tid_to_idx)\n",
+    "R_list_test, R_idx_test,  pid_to_idx_test,  idx_to_pid_test  = format_new_R_list(R_list_test,  tid_to_idx)\n",
+    "\n",
+    "R_list_full, R_idx_full,  pid_to_idx_full,  idx_to_pid_full  = format_new_R_list(R_list_full,  tid_to_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tid_to_idx, _ = list_to_dict(tid_train)\n",
+    "\n",
+    "R_list_full2, R_idx_full,  pid_to_idx_full,  idx_to_pid_full  = format_new_R_list(R_list_full,  tid_to_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.isin(R_list_full[:,1], list(tid_to_idx.keys())).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[     0      1      2 ... 134354 134355 134356]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "134357"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(np.unique(R_idx_full[:,1]))\n",
+    "len(np.unique(R_idx_full[:,1]))"
    ]
   },
   {
