Fixed size mistake in the final training session
Also removed some cells in the last section of the notebook that I was
using for debugging.

--- a/matrix_factorization/matrix_factorization.ipynb
+++ b/matrix_factorization/matrix_factorization.ipynb
@@ -165,11 +165,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Run an epoch of gradient descent where the iterations parameter is the number of iterations.\n",
+    "@njit\n",
     "def run_epoch(R_idx_list, P, Q, alpha, llambda, iterations):\n",
     "    oldP = P.copy()\n",
     "    oldQ = Q.copy()\n",
@@ -1035,38 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run an epoch of gradient descent where the iterations parameter is the number of iterations.\n",
-    "def run_epoch(R_idx_list, P, Q, alpha, llambda, iterations):\n",
-    "    oldP = P.copy()\n",
-    "    oldQ = Q.copy()\n",
-    "    f = np.shape(P)[1]\n",
-    "    \n",
-    "    for _ in range(iterations):\n",
-    "        newP = oldP.copy()\n",
-    "        newQ = oldQ.copy()\n",
-    "        for u,i in R_idx_list:\n",
-    "            dotprod = 0\n",
-    "            for feature in range(f):\n",
-    "                dotprod += oldP[u,feature] * oldQ[i,feature]\n",
-    "            error = dotprod - 1\n",
-    "\n",
-    "            for feature in range(f):\n",
-    "                pf = oldP[u,feature]\n",
-    "                qf = oldQ[i,feature]\n",
-    "                newP[u,feature] -= alpha * (error * qf + llambda * pf) \n",
-    "                newQ[i,feature] -= alpha * (error * pf + llambda * qf)\n",
-    "        oldP = newP\n",
-    "        oldQ = newQ\n",
-    "    return newP, newQ"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,28 +1045,25 @@
     "alpha = 10**-3\n",
     "llambda = 10**-3\n",
     "\n",
-    "NUM_ITERATIONS = 1000"
+    "NUM_ITERATIONS = 100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 7000 is out of bounds for axis 0 with size 7000",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Obtain P, Q with the chosen hyperparameters\u001b[39;00m\n\u001b[1;32m      6\u001b[0m time_start \u001b[38;5;241m=\u001b[39m time()\n\u001b[0;32m----> 7\u001b[0m P_trained, Q_trained \u001b[38;5;241m=\u001b[39m run_epoch(R_idx_full, P\u001b[38;5;241m=\u001b[39mP_initial, Q\u001b[38;5;241m=\u001b[39mQ_initial, alpha\u001b[38;5;241m=\u001b[39malpha, llambda\u001b[38;5;241m=\u001b[39mllambda, iterations\u001b[38;5;241m=\u001b[39mNUM_ITERATIONS)\n\u001b[1;32m      8\u001b[0m time_end \u001b[38;5;241m=\u001b[39m time()\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTraining\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;28mstr\u001b[39m( timedelta(seconds\u001b[38;5;241m=\u001b[39mtime_end\u001b[38;5;241m-\u001b[39mtime_start) )[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m4\u001b[39m])\n",
-      "Cell \u001b[0;32mIn[4], line 13\u001b[0m, in \u001b[0;36mrun_epoch\u001b[0;34m(R_idx_list, P, Q, alpha, llambda, iterations)\u001b[0m\n\u001b[1;32m     11\u001b[0m dotprod \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m feature \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(f):\n\u001b[0;32m---> 13\u001b[0m     dotprod \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m oldP[u,feature] \u001b[38;5;241m*\u001b[39m oldQ[i,feature]\n\u001b[1;32m     14\u001b[0m error \u001b[38;5;241m=\u001b[39m dotprod \u001b[38;5;241m-\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m feature \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(f):\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 7000 is out of bounds for axis 0 with size 7000"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training: 0:00:02.27\n"
      ]
     }
    ],
    "source": [
+    "num_playlists = len(pid_train) + len(pid_val)\n",
+    "\n",
     "# Initialize random data\n",
     "P_initial = np.random.normal(0, 0.1, (num_playlists, f))\n",
     "Q_initial = np.random.normal(0, 0.1, (num_songs, f))\n",
@@ -1105,116 +1072,7 @@
     "time_start = time()\n",
     "P_trained, Q_trained = run_epoch(R_idx_full, P=P_initial, Q=Q_initial, alpha=alpha, llambda=llambda, iterations=NUM_ITERATIONS)\n",
     "time_end = time()\n",
-    "print('Training\"', str( timedelta(seconds=time_end-time_start) )[:-4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of training playlists: 7000\n",
-      "Number of training songs: 134357\n"
-     ]
-    }
-   ],
-   "source": [
-    "R_list_train = R_list[ np.isin(R_list[:,0], pid_train), :]\n",
-    "R_list_val   = R_list[ np.isin(R_list[:,0], pid_val),   :]\n",
-    "R_list_test  = R_list[ np.isin(R_list[:,0], pid_test),  :]\n",
-    "R_list_full  = np.concatenate( (R_list_train, R_list_val))\n",
-    "\n",
-    "# Store the track id of songs in the train/val/test sets\n",
-    "tid_train = np.unique( R_list_train[:,1] )\n",
-    "tid_val   = np.unique( R_list_val[:,1]   )\n",
-    "tid_test  = np.unique( R_list_test[:,1]  )\n",
-    "\n",
-    "num_playlists = len(pid_train)\n",
-    "num_songs = len(tid_train)\n",
-    "\n",
-    "print('Number of training playlists:', num_playlists)\n",
-    "print('Number of training songs:', num_songs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tid_to_idx, _ = list_to_dict(tid_train)\n",
-    "\n",
-    "# Remove tracks we don't know from the validation and test sets\n",
-    "# Create new arrays with consecutive tids\n",
-    "# And store the dicts to go from the original pid-tid labeling to the new consecutive indexing\n",
-    "_,           R_idx_train, _,   _  = format_new_R_list(R_list_train, tid_to_idx)\n",
-    "R_list_val,  R_idx_val,   _,   _  = format_new_R_list(R_list_val,  tid_to_idx)\n",
-    "R_list_test, R_idx_test,  pid_to_idx_test,  idx_to_pid_test  = format_new_R_list(R_list_test,  tid_to_idx)\n",
-    "\n",
-    "R_list_full, R_idx_full,  pid_to_idx_full,  idx_to_pid_full  = format_new_R_list(R_list_full,  tid_to_idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tid_to_idx, _ = list_to_dict(tid_train)\n",
-    "\n",
-    "R_list_full2, R_idx_full,  pid_to_idx_full,  idx_to_pid_full  = format_new_R_list(R_list_full,  tid_to_idx)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.isin(R_list_full[:,1], list(tid_to_idx.keys())).all()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[     0      1      2 ... 134354 134355 134356]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "134357"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(np.unique(R_idx_full[:,1]))\n",
-    "len(np.unique(R_idx_full[:,1]))"
+    "print('Training:', str( timedelta(seconds=time_end-time_start) )[:-4])"
    ]
   },
   {
