Renamed database as MPD_sql.db and removed old unused files
The deleted files are:
- Read_data.ipynb
- Read_data_random.ipynb
- matrix_factorization/matrix_factorization_old.ipynb
The first two loaded data from json files. They are no longer needed since we are using sql. Several functions in matrix_factorization_old also used json files, and are now obsolete.

--- a/Spotify_SQL.ipynb
+++ b/Spotify_SQL.ipynb
@@ -202,7 +202,7 @@
    "source": [
     "data_folder = \"spotify_million_playlist_dataset/data\"\n",
     "\n",
-    "engine = db.create_engine(\"sqlite:///spotify_mpd_test.db\")\n",
+    "engine = db.create_engine(\"sqlite:///MPD_sql.db\")\n",
     "conn = engine.connect()\n",
     "metadata = db.MetaData()\n",
     "\n",
@@ -4404,6 +4404,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db6622fb",
+   "metadata": {},
+   "source": [
+    "Verify that we got the correct number of playlist-track pairings."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "b0ca18aa",
@@ -4461,7 +4469,28 @@
     }
    ],
    "source": [
-    "print('Number of pairings:', num_pairings)"
+    "print('Number of pairings in jsons:', num_pairings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "228ba379",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66346428\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = conn.execute(db.text(\"SELECT COUNT(*) FROM pairings\"))\n",
+    "\n",
+    "N = results.fetchall()[0][0]\n",
+    "print('Number of pairings in SQL:', N)"
    ]
   },
   {
@@ -4470,17 +4499,6 @@
    "metadata": {},
    "source": [
     "## Display the resulting databases"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8fc321a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "engine = db.create_engine(\"sqlite:///spotify_mpd_test.db\")\n",
-    "conn = engine.connect()"
    ]
   },
   {
@@ -4510,28 +4528,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.read_sql_query('SELECT * FROM pairings', conn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "228ba379",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "66346428\n"
-     ]
-    }
-   ],
-   "source": [
-    "results = conn.execute(db.text(\"SELECT COUNT(*) FROM pairings\"))\n",
-    "\n",
-    "N = results.fetchall()[0][0]\n",
-    "print(N)"
+    "# This is too big to read in one line\n",
+    "# pd.read_sql_query('SELECT * FROM pairings', conn)"
    ]
   },
   {
@@ -4544,28 +4542,6 @@
     "# close the database connection\n",
     "conn.close()\n",
     "engine.dispose()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d40eeb96",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24a286c0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "playlists = pd.read_sql_query('SELECT * FROM playlists', conn)\n",
-    "playlists = playlists.sort_values('pid')\n",
-    "\n",
-    "pid = playlists['pid']\n",
-    "pid"
    ]
   },
   {
