Fixed tid mismatch between tracks and pairings in SQL database

--- a/matrix_factorization/Evaluate_on_test_set.ipynb
+++ b/matrix_factorization/Evaluate_on_test_set.ipynb
@@ -62,73 +62,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.51%: 3.10 sec\n",
-      "3.01%: 1.75 sec\n",
-      "4.52%: 1.53 sec\n",
-      "6.03%: 1.59 sec\n",
-      "7.54%: 1.46 sec\n",
-      "9.04%: 1.46 sec\n",
-      "10.55%: 1.50 sec\n",
-      "12.06%: 1.71 sec\n",
-      "13.57%: 1.47 sec\n",
-      "15.07%: 1.53 sec\n",
-      "16.58%: 1.51 sec\n",
-      "18.09%: 1.21 sec\n",
-      "19.59%: 1.64 sec\n",
-      "21.10%: 1.39 sec\n",
-      "22.61%: 1.58 sec\n",
-      "24.12%: 1.42 sec\n",
-      "25.62%: 1.58 sec\n",
-      "27.13%: 1.39 sec\n",
-      "28.64%: 1.66 sec\n",
-      "30.14%: 1.44 sec\n",
+      "1.51%: 3.07 sec\n",
+      "3.01%: 1.71 sec\n",
+      "4.52%: 1.50 sec\n",
+      "6.03%: 1.53 sec\n",
+      "7.54%: 1.50 sec\n",
+      "9.04%: 1.47 sec\n",
+      "10.55%: 1.47 sec\n",
+      "12.06%: 1.65 sec\n",
+      "13.57%: 1.45 sec\n",
+      "15.07%: 1.47 sec\n",
+      "16.58%: 1.45 sec\n",
+      "18.09%: 1.19 sec\n",
+      "19.59%: 1.55 sec\n",
+      "21.10%: 1.40 sec\n",
+      "22.61%: 1.56 sec\n",
+      "24.12%: 1.38 sec\n",
+      "25.62%: 1.63 sec\n",
+      "27.13%: 1.38 sec\n",
+      "28.64%: 1.61 sec\n",
+      "30.14%: 1.51 sec\n",
       "31.65%: 1.46 sec\n",
-      "33.16%: 1.47 sec\n",
-      "34.67%: 1.21 sec\n",
-      "36.17%: 1.58 sec\n",
-      "37.68%: 1.40 sec\n",
-      "39.19%: 1.60 sec\n",
-      "40.70%: 1.45 sec\n",
-      "42.20%: 1.68 sec\n",
-      "43.71%: 1.41 sec\n",
-      "45.22%: 1.44 sec\n",
-      "46.72%: 1.39 sec\n",
-      "48.23%: 1.60 sec\n",
-      "49.74%: 1.46 sec\n",
-      "51.25%: 1.46 sec\n",
-      "52.75%: 1.60 sec\n",
-      "54.26%: 1.41 sec\n",
-      "55.77%: 1.39 sec\n",
-      "57.28%: 1.37 sec\n",
-      "58.78%: 1.59 sec\n",
-      "60.29%: 1.42 sec\n",
-      "61.80%: 1.41 sec\n",
-      "63.30%: 1.40 sec\n",
-      "64.81%: 1.41 sec\n",
-      "66.32%: 1.35 sec\n",
-      "67.83%: 1.56 sec\n",
-      "69.33%: 1.38 sec\n",
-      "70.84%: 1.59 sec\n",
-      "72.35%: 1.42 sec\n",
-      "73.85%: 1.41 sec\n",
-      "75.36%: 1.38 sec\n",
-      "76.87%: 1.37 sec\n",
-      "78.38%: 1.61 sec\n",
-      "79.88%: 1.49 sec\n",
-      "81.39%: 1.42 sec\n",
-      "82.90%: 1.18 sec\n",
-      "84.41%: 1.53 sec\n",
-      "85.91%: 1.60 sec\n",
-      "87.42%: 1.22 sec\n",
-      "88.93%: 1.53 sec\n",
+      "33.16%: 1.57 sec\n",
+      "34.67%: 1.26 sec\n",
+      "36.17%: 1.77 sec\n",
+      "37.68%: 1.51 sec\n",
+      "39.19%: 1.72 sec\n",
+      "40.70%: 1.48 sec\n",
+      "42.20%: 1.70 sec\n",
+      "43.71%: 1.43 sec\n",
+      "45.22%: 1.53 sec\n",
+      "46.72%: 1.52 sec\n",
+      "48.23%: 1.73 sec\n",
+      "49.74%: 1.48 sec\n",
+      "51.25%: 1.41 sec\n",
+      "52.75%: 1.74 sec\n",
+      "54.26%: 1.49 sec\n",
+      "55.77%: 1.43 sec\n",
+      "57.28%: 1.39 sec\n",
+      "58.78%: 1.62 sec\n",
+      "60.29%: 1.43 sec\n",
+      "61.80%: 1.43 sec\n",
+      "63.30%: 1.45 sec\n",
+      "64.81%: 1.43 sec\n",
+      "66.32%: 1.41 sec\n",
+      "67.83%: 1.68 sec\n",
+      "69.33%: 1.46 sec\n",
+      "70.84%: 1.69 sec\n",
+      "72.35%: 1.46 sec\n",
+      "73.85%: 1.46 sec\n",
+      "75.36%: 1.41 sec\n",
+      "76.87%: 1.39 sec\n",
+      "78.38%: 1.63 sec\n",
+      "79.88%: 1.46 sec\n",
+      "81.39%: 1.44 sec\n",
+      "82.90%: 1.20 sec\n",
+      "84.41%: 1.56 sec\n",
+      "85.91%: 1.65 sec\n",
+      "87.42%: 1.23 sec\n",
+      "88.93%: 1.55 sec\n",
       "90.43%: 1.35 sec\n",
-      "91.94%: 1.61 sec\n",
-      "93.45%: 1.35 sec\n",
-      "94.96%: 1.57 sec\n",
-      "96.46%: 1.42 sec\n",
-      "97.97%: 1.41 sec\n",
-      "99.48%: 0.72 sec\n",
-      "0:01:39.84\n",
+      "91.94%: 1.60 sec\n",
+      "93.45%: 1.40 sec\n",
+      "94.96%: 1.62 sec\n",
+      "96.46%: 1.41 sec\n",
+      "97.97%: 1.40 sec\n",
+      "99.48%: 0.74 sec\n",
+      "0:01:41.34\n",
       "\n",
       "We have 1000000 playlists\n"
      ]
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b7af2fae",
    "metadata": {},
    "outputs": [],
@@ -281,12 +281,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "bb15febe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_name = 'models/Q_trained_full_20_feats.npy'\n",
+    "# file_name = 'models/Q_trained_full_20_feats.npy'\n",
+    "file_name = 'models/Q_trained_20.npy'\n",
     "Q_trained = np.load(file_name)\n",
     "\n",
     "f = Q_trained.shape[1]"
@@ -310,8 +311,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done: 16.676 sec\n",
-      "MSE on test set: 0.03545\n"
+      "Done: 16.573 sec\n",
+      "MSE on test set: 0.03512\n"
      ]
     }
    ],
@@ -340,19 +341,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "608a25f3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done: 3.806 sec\n",
-      "MSE on val set: 0.03642\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize random data\n",
     "P_initial = np.random.normal(0, 0.1, (num_playlists, f))\n",
