stored functions in separate module and changed matrix_factorization.ipynb to import from this module

--- a/matrix_factorization/matrix_factorization.ipynb
+++ b/matrix_factorization/matrix_factorization.ipynb
@@ -39,7 +39,7 @@
    "outputs": [],
    "source": [
     "# Load functions\n",
-    "%run Functions.ipynb"
+    "from functions import *"
    ]
   },
   {
