Remove Functions.ipynb notebook
Also changed Evaluate_on_test_set.ipynb to load the python file instead
of the notebook.

--- a/matrix_factorization/Evaluate_on_test_set.ipynb
+++ b/matrix_factorization/Evaluate_on_test_set.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# Load functions\n",
-    "%run Functions.ipynb"
+    "from functions import *"
    ]
   },
   {
